// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders ThreadMessagePreviewBody without crashing 1`] = `
<body>
  <div>
    This is a message
  </div>
</body>
`;

exports[`should not show an empty thread preview 1`] = `
<div>
  http://localhost:3000/group/ds?msg=ZoX9pDowqNb4BiWxf
</div>
`;
